Fix for filters text not wrapping

--- a/css/project.css
+++ b/css/project.css
@@ -263,7 +263,7 @@ a {
 		position: absolute;
 		font-size: 10pt;
 		top: 29%;
-		width: 162px;
+		width: 140px;
 	}
 
 	.filter-question-two {
@@ -271,7 +271,7 @@ a {
 		position: absolute;
 		font-size: 10pt;
 		top: 52%;
-		width: 162px;
+		width: 140px;
 	}
 
 	.filter-question-three {
@@ -279,7 +279,7 @@ a {
 		position: absolute;
 		font-size: 10pt;
 		top: 74%;
-		width: 162px;
+		width: 140px;
 	}
 
 	.fit-the-filter {
